[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-viz"
version = "0.1.0"
description = "Interactive visualization of code dependencies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Code Viz Team"}
]
keywords = ["code", "visualization", "dependencies", "graph", "ast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "networkx>=3.0",
    "jinja2>=3.0",
    "libcst>=1.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
code-viz = "code_viz.cli:main"

[project.urls]
Homepage = "https://github.com/MichaelUniHorus/code-vizRAD"
Repository = "https://github.com/MichaelUniHorus/code-vizRAD"
Issues = "https://github.com/MichaelUniHorus/code-vizRAD/issues"

[tool.hatch.build.targets.wheel]
packages = ["code_viz"]

[tool.hatch.build.targets.sdist]
include = [
    "/code_viz",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
[tool.ruff.lint.per-file-ignores]
# HTML template contains various whitespace issues and long lines in CSS/JS
"code_viz/render.py" = ["W293", "W291", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=code_viz --cov-report=term-missing"
