[metadata]
name = code-viz
version = 0.1.0
description = Interactive visualization of code dependencies
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Code Viz Team
python_requires = >=3.9
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    click>=8.0.0
    rich>=13.0.0
    networkx>=3.0
    jinja2>=3.0
    libcst>=1.0
    watchdog>=3.0

[options.packages.find]
where = .
include = code_viz*

[options.entry_points]
console_scripts =
    code-viz = code_viz.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    ruff>=0.1.0
    mypy>=1.0
    pre-commit>=3.0
